--- a/VidCoder/Resources/Translations/LogRes.ru.resx
+++ b/VidCoder/Resources/Translations/LogRes.ru.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="LogWindowTitle" xml:space="preserve">
-    <value>Отчёт</value>
+    <value>Журнал</value>
   </data>
   <data name="GeneralLogLabel" xml:space="preserve">
     <value>Общее</value>
@@ -133,13 +133,13 @@
     <value>Подробный</value>
   </data>
   <data name="CopyToPastebinButton" xml:space="preserve">
-    <value>Копировать ссылку Pastebin</value>
+    <value>Копировать ссылку на Pastebin</value>
     <comment>Label for button that copies the log to Pastebin and puts the URL on the clipboard.</comment>
   </data>
   <data name="PastebinSuccessStatus" xml:space="preserve">
-    <value>Ссылка на Pastebin была скопирована в буфер обмена.</value>
+    <value>Ссылка на журнал в Pastebin скопирована в буфер обмена.</value>
   </data>
   <data name="ClearFinishedButton" xml:space="preserve">
-    <value>Очистить завершенное</value>
+    <value>Очистить завершённое</value>
   </data>
 </root>
