--- a/VidCoder/Resources/Translations/MiscRes.ru.resx
+++ b/VidCoder/Resources/Translations/MiscRes.ru.resx
@@ -127,7 +127,7 @@
     <value>Выбрать из существующих процессов:</value>
   </data>
   <data name="AddAutoPauseProcessDialogTitle" xml:space="preserve">
-    <value>Добавить авто паузу процесса</value>
+    <value>Добавить автопаузу процесса</value>
   </data>
   <data name="ProcessNameLabel" xml:space="preserve">
     <value>Имя процесса:</value>
@@ -148,7 +148,7 @@
     <value>Перезаписать</value>
   </data>
   <data name="AutoRenameButton" xml:space="preserve">
-    <value>Авто-переименование</value>
+    <value>Автопереименование</value>
   </data>
   <data name="FileConflictWarning" xml:space="preserve">
     <value>Файл уже существует в {0}. Вы хотите перезаписать файл, автоматически найти новый путь вывода для работы кодирования или отменить операцию?</value>
@@ -157,7 +157,7 @@
     <value>У задания в очереди уже есть путь вывода в {0}. Вы хотите изменить запланированное задание, автоматически найти новый путь вывода для работы кодирования или отменить операцию?</value>
   </data>
   <data name="QueueColumnsDialogTitle" xml:space="preserve">
-    <value>Очередь столбцов</value>
+    <value>Столбцы очереди</value>
   </data>
   <data name="QueueColumnsDialogHeaderText" xml:space="preserve">
     <value>Перетащите, чтобы добавить, удалить или изменить порядок столбцов.</value>
@@ -181,7 +181,7 @@
     <value>Версия</value>
   </data>
   <data name="BasedOnHandBrake" xml:space="preserve">
-    <value>На основе HandBrake (svn {0})</value>
+    <value>На основе HandBrake ({0})</value>
   </data>
   <data name="Copyright" xml:space="preserve">
     <value>© {0} VidCoder Entwickler</value>
@@ -195,13 +195,13 @@
     <comment>Title for dialog when  naming a preset or  picker</comment>
   </data>
   <data name="ChooseNamePreset" xml:space="preserve">
-    <value>Выбирать имя для конфигурации:</value>
+    <value>Выбор имени предустановки:</value>
   </data>
   <data name="ApplyUpdateDialogTitle" xml:space="preserve">
     <value>Применить обновление?</value>
   </data>
   <data name="ApplyUpdateDialogMessage" xml:space="preserve">
-    <value>Обновление было загружено. Хотите установить его сейчас?</value>
+    <value>Обновление загружено. Установить его сейчас?</value>
   </data>
   <data name="ViewFullChangelog" xml:space="preserve">
     <value>Показать все изменения</value>
@@ -213,46 +213,46 @@
     <value>Уведомление</value>
   </data>
   <data name="UnsupportedOSError" xml:space="preserve">
-    <value>VidCoder не поддерживается в операционной системе. Windows XP и Server 2003 больше не работают. Установите VidCoder 1.4 или обновить операционную систему.</value>
+    <value>VidCoder не поддерживает вашу операционную систему. Windows XP и Server 2003 больше не поддерживаются. Установите VidCoder 1.4 или обновите операционную систему.</value>
   </data>
   <data name="EncodeCompleteWarning_SleepTitle" xml:space="preserve">
-    <value>Приближается сонный режим</value>
+    <value>Неизбежный сон системы</value>
   </data>
   <data name="EncodeCompleteWarning_LogOffTitle" xml:space="preserve">
-    <value>Выход неизбежен</value>
+    <value>Неизбежный выход</value>
   </data>
   <data name="EncodeCompleteWarning_ShutdownTitle" xml:space="preserve">
-    <value>Предстоящее завершение работы</value>
+    <value>Неизбежное завершение работы</value>
   </data>
   <data name="EncodeCompleteWarning_SleepMessage" xml:space="preserve">
-    <value>Система Войдет в спящий режим через {0} секунд.</value>
+    <value>Система уйдёт в спящий режим через {0} сек.</value>
   </data>
   <data name="EncodeCompleteWarning_LogOffMessage" xml:space="preserve">
-    <value>Вы выйдетесь в {0}.</value>
+    <value>Выход произойдёт через {0} сек.</value>
   </data>
   <data name="EncodeCompleteWarning_ShutdownMessage" xml:space="preserve">
-    <value>Система будет выключена в {0} секунд.</value>
+    <value>Система будет выключена через {0} сек.</value>
   </data>
   <data name="EncodeCompleteWarning_Title" xml:space="preserve">
     <value>Кодирование завершено.</value>
   </data>
   <data name="CouldNotFindVideoPlayerError" xml:space="preserve">
-    <value>Не удалось найти видео плеер для {0}.</value>
+    <value>Невозможно найти видеоплеер для {0}.</value>
   </data>
   <data name="ErrorPlayingSource" xml:space="preserve">
-    <value>Ошибка проигрывания источника.</value>
+    <value>Ошибка проигрывания исходника.</value>
   </data>
   <data name="EncodeCompleteWarning_HibernateMessage" xml:space="preserve">
-    <value>Система Войдет в спящий режим через {0} секунд.</value>
+    <value>Система уйдёт в режим гибернации через {0} сек.</value>
   </data>
   <data name="EncodeCompleteWarning_HibernateTitle" xml:space="preserve">
-    <value>Принудительный Режим Гибернации</value>
+    <value>Неизбежный режим гибернации</value>
   </data>
   <data name="ChooseNamePicker" xml:space="preserve">
-    <value>Выбирать имя для конфигурации:</value>
+    <value>Имя для выбора:</value>
   </data>
   <data name="ExceptionDialogSubTextReported" xml:space="preserve">
-    <value>Программа вынужденно будет закрыта, отчет об ошибке будет отправлен автоматически.</value>
+    <value>Программа вынужденно будет закрыта, отчёт об ошибке будет отправлен автоматически.</value>
   </data>
   <data name="DownloadInstallerButton" xml:space="preserve">
     <value>Скачать инсталлятор</value>
