--- a/VidCoder/Resources/Translations/EnumsRes.pt.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.pt.resx
@@ -289,22 +289,60 @@
   <data name="PickerTimeRangeMode_Time" xml:space="preserve">
     <value>Intervalo de tempo</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DeleteSourceFilesMode_DeleteWithConfirmation" xml:space="preserve">
+    <value>Eliminar ficheiros (com confirmação)</value>
+  </data>
+  <data name="DeleteSourceFilesMode_Recycle" xml:space="preserve">
+    <value>Enviar para a Reciclagem</value>
+  </data>
+  <data name="WhenFileExists_AutoRename" xml:space="preserve">
+    <value>Renomear automaticamente</value>
+  </data>
+  <data name="WhenFileExists_Overwrite" xml:space="preserve">
+    <value>Sobrescrever</value>
+  </data>
+  <data name="WhenFileExists_Prompt" xml:space="preserve">
+    <value>Perguntar</value>
+  </data>
+  <data name="DenoiseTune_medium" xml:space="preserve">
+    <value>Médio</value>
+  </data>
+  <data name="DenoiseTune_none" xml:space="preserve">
+    <value>Nenhum</value>
+  </data>
+  <data name="DenoiseTune_small" xml:space="preserve">
+    <value>Pequeno</value>
+  </data>
+  <data name="DenoiseTune_tiny" xml:space="preserve">
+    <value>Minúsculo</value>
+  </data>
+  <data name="DenoiseTune_verywide" xml:space="preserve">
+    <value>Muito grande</value>
+  </data>
+  <data name="DenoiseTune_wide" xml:space="preserve">
+    <value>Grande</value>
+  </data>
+  <data name="Denoise_ChromaSmooth" xml:space="preserve">
+    <value>Cor suave:</value>
+  </data>
+  <data name="DragDropOrder_Alphabetical" xml:space="preserve">
+    <value>Alfabeticamente</value>
+    <comment>Label for the option to order dragged files alphabetically</comment>
+  </data>
+  <data name="DragDropOrder_Selected" xml:space="preserve">
+    <value>Seleccionado</value>
+    <comment>Label for the option to order dragged files as they had been selected in File explorer</comment>
+  </data>
+  <data name="SubtitleBurnInSelection_First" xml:space="preserve">
+    <value>Primeiro</value>
+  </data>
+  <data name="SubtitleBurnInSelection_ForeignAudioTrack" xml:space="preserve">
+    <value>Faixa de áudio externa</value>
+  </data>
+  <data name="SubtitleBurnInSelection_ForeignAudioTrackElseFirst" xml:space="preserve">
+    <value>Faixa de áudio externa, senão a primeira</value>
+  </data>
+  <data name="SubtitleBurnInSelection_None" xml:space="preserve">
+    <value>Nenhuma</value>
+  </data>
 </root>
