--- a/VidCoder/Resources/Translations/PickerRes.pt.resx
+++ b/VidCoder/Resources/Translations/PickerRes.pt.resx
@@ -237,7 +237,9 @@
     <value>Filtrar títulos por duração</value>
     <comment>Name for screen readers for the checkbox to filter titles by a given duration range.</comment>
   </data>
-  
+  <data name="ChangeCaptializationLabel" xml:space="preserve">
+    <value>Alterar letra para</value>
+  </data>
   <data name="TimeRangeStartAutomationName" xml:space="preserve">
     <value>Início do intervalo de tempo</value>
   </data>
@@ -260,42 +262,131 @@
   <data name="ChapterRangeStartAutomationName" xml:space="preserve">
     <value>Início do intervalo do capítulo</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DestinationSection" xml:space="preserve">
+    <value>Destino</value>
+  </data>
+  <data name="OutputFolder" xml:space="preserve">
+    <value>Pasta de saída:</value>
+    <comment>Label for the output folder.</comment>
+  </data>
+  <data name="UseCustomFileNameFormatCheckBox" xml:space="preserve">
+    <value>Usar formato de nome de ficheiro personalizado:</value>
+  </data>
+  <data name="WhenFileExistsBatch" xml:space="preserve">
+    <value>Quando o ficheiro já existir (Lote):</value>
+  </data>
+  <data name="WhenFileExistsSingle" xml:space="preserve">
+    <value>Quando o ficheiro já existir (Simples):</value>
+  </data>
+  <data name="CustomPickerNameTemplate" xml:space="preserve">
+    <value>{0} personalizado</value>
+    <comment>The name for a custom auto-created picker. {0} is a number like 2, or 3 or 4 to differentiate it</comment>
+  </data>
+  <data name="OutputFileNameFormatAutomationName" xml:space="preserve">
+    <value>Formato do nome de ficheiro</value>
+    <comment>Name for screen readers for the output file name format text box</comment>
+  </data>
+  <data name="OnlyChangeCapitalizationIfAllSameLabel" xml:space="preserve">
+    <value>Só alterar a letra se estiverem todas em minúsculas ou maiúsculas</value>
+  </data>
+  <data name="WordBreakCharacterAutomationNameFormat" xml:space="preserve">
+    <value>Caractere de quebra de palavra - {0}</value>
+    <comment>Screen reader format for word break checkboxes. These will determine if a character will be used to separate words.</comment>
+  </data>
+  <data name="WordBreakCharactersLabel" xml:space="preserve">
+    <value>Caracteres de quebra de palavra reconhecidos:</value>
+  </data>
+  <data name="WordBreakCharacter_Dot" xml:space="preserve">
+    <value>Ponto</value>
+  </data>
+  <data name="WordBreakCharacter_Space" xml:space="preserve">
+    <value>Espaço</value>
+  </data>
+  <data name="WordBreakCharacter_Underscore" xml:space="preserve">
+    <value>Underscore</value>
+  </data>
+  <data name="ChangeWordSeparatorLabel" xml:space="preserve">
+    <value>Alterar separador de palavras para</value>
+  </data>
+  <data name="SourceCleanupPreviewLabel" xml:space="preserve">
+    <value>Pré-visualização:</value>
+  </data>
+  <data name="SourceNameCleanupSection" xml:space="preserve">
+    <value>Limpeza do nome original</value>
+  </data>
+  <data name="AddAudioTrackNameButton" xml:space="preserve">
+    <value>Adicionar nome da faixa de áudio</value>
+    <comment>Button to add another name to the list of audio track names in the Picker.</comment>
+  </data>
+  <data name="AddSubtitleTrackNameButton" xml:space="preserve">
+    <value>Adicionar nome da faixa de legenda</value>
+    <comment>Button to add another name to the list of subtitle track names in the Picker.</comment>
+  </data>
+  <data name="CustomTrackNamesCheckBox" xml:space="preserve">
+    <value>Nomes personalizados de faixas</value>
+    <comment>Checkbox label to use custom audio or subtitle track names</comment>
+  </data>
+  <data name="TrackAutomationFormat" xml:space="preserve">
+    <value>Faixa {0}</value>
+    <comment>Screen reader format for track names in the Picker.</comment>
+  </data>
+  <data name="BurnInLabel" xml:space="preserve">
+    <value>Gravar em:</value>
+  </data>
+  <data name="PickerAudioSectionName" xml:space="preserve">
+    <value>Áudio</value>
+  </data>
+  <data name="PickerForeignAudioCheckBox" xml:space="preserve">
+    <value>Adicionar faixa 'Pesquisa de áudio externo'</value>
+  </data>
+  <data name="PickerSubtitleSectionName" xml:space="preserve">
+    <value>Legendas</value>
+  </data>
+  <data name="SubtitleSelectionMode_ForeignAudioSearch" xml:space="preserve">
+    <value>Pesquisar áudio externo</value>
+  </data>
+  <data name="TrackSelectionLabel" xml:space="preserve">
+    <value>Selecção de faixa:</value>
+    <comment>Label for track selection mode for audio or subtitle tracks.</comment>
+  </data>
+  <data name="AudioSelectionModeToolTip" xml:space="preserve">
+    <value>Última seleccionada - Escolhe a última faixa de áudio seleccionada se for encontrada uma correspondência, caso contrário escolhe a primeira.
+Primeira - Inclui apenas a primeira faixa de áudio.
+Por índice - Escolhe pelo índice da faixa (base 1)
+Idioma(s) - Escolhe por idioma
+Todas - Inclui todas as faixas de áudio.</value>
+  </data>
+  <data name="SubtitleSelectionModeToolTip" xml:space="preserve">
+    <value>Última selecionada - Escolhe a última faixa de legenda seleccionada se for encontrada uma correspondência, caso contrário não escolhe nenhuma faixa.
+Nenhuma - Nenhuma legenda é incluída.
+Primeira - Inclui apenas a primeira legenda.
+Por índice - Escolhe pelo índice da faixa (base 1)
+Idioma(s) - Escolhe por idioma
+Todas - Inclui todas as legendas.</value>
+  </data>
+  <data name="IgnoreFilesBelowCheckBox" xml:space="preserve">
+    <value>Ignorar ficheiros abaixo</value>
+    <comment>A number box follows this string: Ignore files below [ 10 ] MB</comment>
+  </data>
+  <data name="TimeRangeLabel" xml:space="preserve">
+    <value>Intervalo de tempo:</value>
+  </data>
+  <data name="VideoSelectionSection" xml:space="preserve">
+    <value>Selecção de vídeo</value>
+  </data>
+  <data name="MetadataSection" xml:space="preserve">
+    <value>Metadados</value>
+  </data>
+  <data name="PassThroughMetadataCheckBox" xml:space="preserve">
+    <value>Preservar metadados de vídeo (director, data de lançamento, actores, etc)</value>
+  </data>
   <data name="BurnInCheckBox" xml:space="preserve">
     <value>Gravar na imagem</value>
   </data>
-  
-  
+  <data name="ExternalSubtitleImportCheckBox" xml:space="preserve">
+    <value>Adicionar ficheiros de legenda externos ({0}) com o mesmo nome do ficheiro de vídeo de entrada</value>
+  </data>
+  <data name="LanguageLabel" xml:space="preserve">
+    <value>Idioma:</value>
+  </data>
 </root>
