--- a/VidCoder/Resources/Translations/SubtitleRes.pt.resx
+++ b/VidCoder/Resources/Translations/SubtitleRes.pt.resx
@@ -153,7 +153,9 @@
   <data name="BurnedOverlapWarning" xml:space="preserve">
     <value>Outras pistas de legenda vão sobrepor-se às legendas integradas.</value>
   </data>
-  
+  <data name="ForeignAudioScan" xml:space="preserve">
+    <value>Pesquisar áudio externo</value>
+  </data>
   <data name="SubtitleFilePickerText" xml:space="preserve">
     <value>Adicionar ficheiro de legendas</value>
   </data>
